--- a/client/index.html
+++ b/client/index.html
@@ -213,8 +213,8 @@ services:
         </div>
       </div>
 
-      <div v-if="activeSection === 'config'" class="bg-white rounded-lg shadow p-6">
-        <h2 class="text-xl font-semibold mb-6">配置设置</h2>
+      <div v-if="activeSection === 'config'" class="bg-white rounded-lg shadow p-6 mb-6">
+        <h2 class="text-xl font-semibold mb-6">下载设置</h2>
         <form @submit.prevent="updateConfig" class="space-y-6">
           <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
             <!-- 线程数 -->
@@ -296,6 +296,33 @@ services:
               class="px-6 py-2 text-gray-600 hover:bg-gray-100 rounded-lg border">
               重置配置
             </button> -->
+            <button type="submit" class="px-6 py-2 bg-blue-500 hover:bg-blue-600 text-white rounded-lg">
+              保存配置
+            </button>
+          </div>
+        </form>
+      </div>
+
+      <div v-if="activeSection === 'config'" class="bg-white rounded-lg shadow p-6">
+        <h2 class="text-xl font-semibold mb-6">本地设置</h2>
+        <form @submit.prevent="updateLocalConfig" class="space-y-6">
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+            <!-- 访问密码 -->
+            <div>
+              <label class="block text-sm font-bold text-gray-700 mb-1">访问密码</label>
+              <div class="flex">
+                <input v-model="token" type="password" maxlength="256" class="w-full p-2 border rounded-lg focus:ring-blue-500"
+                  placeholder="请输入访问密码" />
+              </div>
+              <p class="mt-1 text-sm text-gray-500">若服务端设置了访问密码(token)，请在此输入</p>
+            </div>
+          </div>
+
+          <div class="flex justify-end space-x-4">
+            <!-- <button type="button" @click="resetConfig"
+                    class="px-6 py-2 text-gray-600 hover:bg-gray-100 rounded-lg border">
+                    重置配置
+                  </button> -->
             <button type="submit" class="px-6 py-2 bg-blue-500 hover:bg-blue-600 text-white rounded-lg">
               保存配置
             </button>
@@ -465,8 +492,10 @@ services:
   </div>
   <script>
     const T = {
+      token: '',
       reqHeaders: {
-        'content-type': 'application/json'
+        'content-type': 'application/json',
+        authorization: localStorage.getItem('token') || '',
       },
       request(method, url, data, headers = {}) {
         return fetch(url, {
@@ -544,6 +573,7 @@ services:
     new Vue({
       el: '#app',
       data: {
+        ws: null,
         version: '',
         config: {
           /** 并发下载线程数。取决于服务器限制，过多可能会容易下载失败。一般建议不超过 8 个。默认为 cpu数 * 2，但不超过 8 */
@@ -552,8 +582,6 @@ services:
           saveDir: '',
           /** 下载成功后是否删除临时文件。默认为 true。保存临时文件可以在重复下载时识别缓存 */
           delCache: true,
-          /** 下载 m3u8、ts 等文件时自定义请求 headers */
-          // headers: {},
           /** 下载完毕后，是否合并转换为 mp4 或 ts 文件。默认为 true */
           convert: true,
           /** 是否显示预览按钮 */
@@ -563,7 +591,8 @@ services:
           /** 最大并发下载数 */
           maxDownloads: 3,
         },
-        downloadUrl: '',
+        /** 访问密码(token) */
+        token: T.reqHeaders.authorization,
         /** 下载任务列表，以 url 为 key */
         tasks: {},
         /** 队列状态 */
@@ -602,7 +631,7 @@ services:
 
           // 排序：resume > pending > pause > error > done
           const statusOrder = { resume: 0, pending: 1, pause: 2, error: 3, done: 4 };
-          tasks.sort((a, b) => statusOrder[a.status] - statusOrder[b.status]);
+          tasks.sort((a, b) => (statusOrder[a.status] - statusOrder[b.status]) || (b.endTime - a.endTime));
 
           // 更新 queueStatus
           const queueStatus = {
@@ -625,13 +654,18 @@ services:
       methods: {
         forceUpdate: function () {
           const now = Date.now();
-          if (now - this.forceUpdateTime > 300) {
-            this.$nextTick(() => this.$forceUpdate());
+          if (now - this.forceUpdateTime > 500) {
+            this.$forceUpdate();
             this.forceUpdateTime = now;
           } else this.forceUpdate();
         },
         wsConnect: function (reconnectDelay = 3000) {
-          const ws = new WebSocket(`ws://${location.host}/ws`);
+          if (this.ws && this.ws.readyState === WebSocket.OPEN) {
+            this.ws.close();
+          }
+
+          const ws = new WebSocket(`ws://${location.host}/ws?token=${this.token}`);
+          this.ws = ws;
           ws.onmessage = (e) => {
             const { type, data } = T.safeJSONParse(e.data);
 
@@ -643,8 +677,11 @@ services:
                 this.tasks = data;
                 break;
               case 'progress':
-                this.tasks[data.url] = data;
-                this.$nextTick(() => this.forceUpdate());
+                if (!data.url) return;
+                this.$nextTick(() => {
+                  this.tasks[data.url] = data;
+                  // this.forceUpdate();
+                });
                 break;
               case 'queueStatus':
                 this.queueStatus = data;
@@ -654,7 +691,12 @@ services:
           ws.onopen = () => {
             T.toast('ws连接成功', { icon: 'success' });
           };
-          ws.onclose = (ev, code, reason) => {
+          ws.onclose = (ev) => {
+            console.error('ws连接关闭:', ev.code, ev.reason);
+            if (ev.code === 1008) {
+              return T.alert('未授权或密码不正确，请在设置界面输入正确的访问密码', { icon: 'error' });
+            }
+
             T.toast(`连接已断开，${reconnectDelay / 1000}s 后将重试...`, { icon: 'error' });
             setTimeout(() => {
               this.wsConnect(reconnectDelay + 1000);
@@ -663,23 +705,40 @@ services:
         },
         /** 获取配置 */
         fetchConfig: async function () {
-          try {
-            const config = await T.get('/config');
-            for (const key in config) {
-              if (key in this.config) this.config[key] = config[key];
-            }
-          } catch (error) {
-            console.error('获取配置失败:', error);
+          const config = await T.get('/config');
+          if (config.code) {
+            console.error('获取配置失败:', config);
+            T.alert('获取配置失败: ' + config.message, { icon: 'error' });
+            return false;
           }
+          for (const key in config) {
+            if (key in this.config) this.config[key] = config[key];
+          }
+          return true;
         },
         /** 更新配置 */
         updateConfig: async function () {
           try {
             const result = await T.post('/config', this.config);
-            T.toast(result.message || '配置已更新');
+            T.toast(result.message || '配置已更新', { icon: result.code ? 'error' : 'success' });
           } catch (error) {
             console.error('更新配置失败:', error);
             T.alert('更新配置失败: ' + error.message);
+          }
+        },
+        updateLocalConfig: async function () {
+          this.updateToken();
+        },
+        updateToken() {
+          const isUpdated = this.token !== T.reqHeaders.authorization;
+          if (!isUpdated) return;
+
+          T.reqHeaders.authorization = this.token || '';
+          if (this.token) {
+            localStorage.setItem('token', this.token);
+            this.fetchConfig().then(d => d && this.wsConnect());
+          } else {
+            localStorage.removeItem('token');
           }
         },
         /** 显示新建下载弹窗 */
@@ -739,7 +798,7 @@ services:
 
               return urls.map((item, idx) => ({
                 url: item.url,
-                filename: item.name || filename ? `${filename}第${idx + 1}集` : '',
+                filename: item.name || (filename ? `${filename}第${idx + 1}集` : ''),
                 saveDir,
                 headers,
               }));
@@ -862,7 +921,7 @@ services:
               title: task?.options.filename || task.url,
               width: '1000px',
               showConfirmButton: false,
-              html: `<video autoplay width="100%" style="max-width: 1000px; min-height: 300px" src="${url}" controls></video> `,
+              html: `<video autoplay width="100%" style="max-width: 1000px; min-height: 300px; max-height: 90vh" src="${url}" controls></video> `,
             });
           } else {
             window.open(`http://lzw.me/x/m3u8-player/?url=${encodeURIComponent(url)}`);
@@ -936,8 +995,9 @@ services:
         },
       },
       mounted() {
-        this.fetchConfig();
-        this.wsConnect();
+        T.reqHeaders.authorization = this.token ? `${this.token}` : '';
+
+        this.fetchConfig().then(d => d && this.wsConnect());
         window.addEventListener('resize', this.handleResize);
       },
       beforeDestroy() {
